--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,39 @@
+{% load static %}
+
 <!doctype html>
 <html lang="">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <!-- Custom -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Lightbox -->
+    <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
     <title>BT Real Estate</title>
 
 </head>
 <body>
+
+    <!-- Top Bar -->
+    {% include 'partials/_topbar.html' %}
+    <!-- NavBar -->
+    {% include 'partials/_navbar.html' %}
+    <!-- Main Content-->
     {% block content %} {% endblock %}
+    <!-- footer -->
+    {% include 'partials/_footer.html' %}
+
+
+
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/lightbox.min.js' %}"></script>
 </body>
 </html>
