--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -23,6 +23,22 @@
             </ul>
 
             <ul class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                <li {% if 'dashboard' in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}>
+                    <a class="nav-link" href="{% url 'dashboard' %}">
+                        Welcome, {{ user.username }} (Dashboard)</a>
+                </li>
+                <li class="nav-item mr-3">
+                    <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                    </a>
+                    <form action="{% url 'logout' %}" id="logout" method="POST">
+                        {% csrf_token %}
+                        <input type="hidden">
+                    </form>
+
+                </li>
+                {% else %}
                 <li {% if 'register' in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}>
                     <a class="nav-link" href="{% url 'register' %}">
                         <i class="fas fa-user-plus"></i>
@@ -33,6 +49,7 @@
                         <i class="fas fa-sign-in-alt"></i>
                         Login</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
