--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 
 <!doctype html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +16,10 @@
     <!-- Lightbox -->
     <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
-    <title>BT Real Estate</title>
+    <title>BT Real Estate {% block title %}{% endblock %}</title>
 
 </head>
+
 <body>
 
     <!-- Top Bar -->
@@ -36,4 +38,5 @@
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'js/lightbox.min.js' %}"></script>
 </body>
+
 </html>
